# RedlineOS

./: CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
redlineos/: app.py
redlineos/annotations/: base_annotation.py  cad.py  drawing.py  markup.py
redlineos/canvas/: pdf_canvas.py  renderer.py  viewport.py
redlineos/document/: document.py  layers.py  page.py
redlineos/io/: dxf_handler.py  pdf_reader.py  pdf_writer.py  svg_handler.py
redlineos/symbols/: library.py
redlineos/symbols/templates/: ansi.py  iso.py
redlineos/tools/: base_tool.py  markup_tool.py  measurement_tool.py  pen_tool.py  select_tool.py  shape_tool.py  text_tool.py
redlineos/ui/: main_window.py  tool_panel.py  toolbar.py
redlineos/ui/dialogs/: export_dialog.py  settings_dialog.py
redlineos/ui/panels/: comments_panel.py  layers_panel.py  properties_panel.py  symbol_library_panel.py
redlineos/ui/ribbon/: ribbon.py  ribbon_button.py  ribbon_group.py  ribbon_tab.py
redlineos/utils/: config.py  geometry.py
tests/: test_annotations.py  test_document.py  test_io.py  test_tools.py
