[project]
name = "redlineos"
version = "0.1.0"
description = "A free and open-source PDF editor with advanced markup and CAD-style tools"
requires-python = ">=3.13"
license = { text = "AGPL-3.0" }
dependencies = [
    "PySide6>=6.7.0",
    "PyMuPDF>=1.24.0",
    "ezdxf>=1.3.0",
]

[project.scripts]
redlineos = "main:main"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"
